--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,7 +24,7 @@ div.wrapper {
 
   .default {
     display: none;
-    margin: none;
+    margin: 0;
   }
 }
 
